// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test InfoField render info field item with body 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#8C8C8C",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 14,
          "lineHeight": 22,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginTop": 8,
        },
      ]
    }
  >
    title
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#262626",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginTop": 8,
        },
      ]
    }
  >
    value
        
  </Text>
</View>
`;

exports[`Test InfoField render info field item without body 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#8C8C8C",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 14,
          "lineHeight": 22,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginTop": 8,
        },
      ]
    }
  >
    title
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#262626",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 14,
          "lineHeight": 22,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginTop": 8,
        },
      ]
    }
  >
    value
        
    <Text
      onPress={[Function]}
      style={
        Array [
          Object {
            "color": "#00979D",
            "fontFamily": "SFProDisplay-Regular",
            "fontSize": 14,
            "lineHeight": 22,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {},
        ]
      }
    >
      Chỉ đường
    </Text>
  </Text>
</View>
`;
